# Esp32WOL

./: .gitignore  LICENSE  LLMs.md  README.md  credentialsFabricator.py  requirements.txt  update_certs.py
CredentialUtils/: UserSession.py
main/: CMakeLists.txt  main.c
main/auth/: auth.c  auth.h  totp.c  totp.h
main/utils/: utils.c  utils.h
main/utils/duckdns/: duckdns.c  duckdns.h
main/utils/ipify/: ipify.c  ipify.h
main/utils/led/: led_utils.c  led_utils.h
main/utils/network/: network.c  network.h
main/utils/nvs/: nvs_utils.c  nvs_utils.h
main/utils/telegram/: queue.c  queue.h  telegram.c  telegram.h
main/web/handlers/: handlers.c  handlers.h
main/web/routes/: routes.c  routes.h
main/web/server/: handlers.c  handlers.h  routes.c  routes.h  server.c  server.h
main/web/views/: copyIp.h  home.h  login.h  service_check.h  status.h  wol.h
main/wifi/: wifi.c  wifi.h
main/wifi/ntp_sync/: ntp_sync.c  ntp_sync.h
main/wifi/public_ip/: public_ip.c  public_ip.h
